--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@ body{
 	margin: 0;
 	padding: 0;
 	background-color: #A69C9B;
+	/* background-color: black; */
 	font-family: Arial,Lucida Sans;
 
 }
