--- a/signin2.css
+++ b/signin2.css
@@ -17,12 +17,13 @@ body {
   max-width: 330px;
   padding: 15px;
   margin: auto;
-  
+
 
 }
 
 .form-signin .checkbox {
   font-weight: 400;
+  font-style:
 }
 
 .form-signin .form-floating:focus-within {
